<resources>
    <string name="app_name">Teste de Estilos</string>
    <string name="texto">Texto</string>
    <string name="texto2">Tamanho da letra</string>
    <string name="texto3">Estilo</string>
    <string name="negrito">Negrito</string>
    <string name="italico">Itálico</string>
    <string name="maiuscula">Maiúscula</string>
    <string name="texto4">Cor da letra</string>
    <string name="vermelho">Vermelho</string>
    <string name="verde">Verde</string>
    <string name="azul">Azul</string>
    <string name="imp">print</string>
</resources>